# bufferManager

./: Bloque.cpp  Bloque.h  BufferManager.cpp  BufferManager.h  BufferPool.cpp  BufferPool.h  CMakeLists.txt  DiskManager.cpp  DiskManager.h  Interfaz.cpp  Interfaz.h  Replacer.h  bufferManager.cpp  bufferManager.h  bufferPool.cpp  bufferPool.h  input.txt  main.cpp
tests/: test1.txt
